Landing page and cosmetic customizations

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -28,10 +28,10 @@
       </script>
     <% end %>
 
-    <title><%= t("bigbluebutton") %></title>
-    <meta property="og:title" content="<%= t("bigbluebutton", locale: :en) %>" />
+    <title>BC2 - Blockchain Core Camp</title>
+    <meta property="og:title" content="BC2 - Blockchain Core Camp powered by <%= t("bigbluebutton", locale: :en) %>" />
     <meta property="og:type" content="website" />
-    <meta property="og:description" content="<%= t("landing.about", href: "Greenlight", locale: :en) %>" />
+    <meta property="og:description" content="BC2 - Cutting edge tech, developer-focused workshop  --  技術特化型ワークショップ" />
     <meta property="og:url" content="<%= request.base_url %>" />
     <meta property="og:image" content="<%= logo_image %>" />
 
